show feedback after user gift interaction

--- a/gifts/templates/gifts/components/captain_gift_management.html
+++ b/gifts/templates/gifts/components/captain_gift_management.html
@@ -22,6 +22,7 @@
           {% else %}
           <span class="amber-text text-darken-3"> -Awaiting payment</span>
           <a class="btn right">Confirm Payment</a>
+          <div class="clearfix"></div>
           {% endif %}
         </p>
         {% endif %}
