Captain confirm payments

--- a/gifts/templates/gifts/components/captain_gift_management.html
+++ b/gifts/templates/gifts/components/captain_gift_management.html
@@ -21,7 +21,7 @@
           <span class="green-text"> -Confirmed</span>
           {% else %}
           <span class="amber-text text-darken-3"> -Awaiting payment</span>
-          <a class="btn right">Confirm Payment</a>
+          <a class="btn right" onclick="ajax_confirm_payment({{gift_relation.id}})">Confirm Payment</a>
           <div class="clearfix"></div>
           {% endif %}
         </p>
