--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -63,8 +63,9 @@
 </div>
 
 
-
-{{captain_management_component}}
+<div id="captain_management_component">
+  {{captain_management_component}}
+</div>
 
 {% endif %}
 
