add adsense script

--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -16,6 +16,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static 'gifts/images/favicon.png' %}" />
+    {% if environment == 'live' %}
+        <script data-ad-client="ca-pub-8469454381902655" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    {% endif %}
 
 </head>
 
