added about page

--- a/gifts/templates/gifts/footer.html
+++ b/gifts/templates/gifts/footer.html
@@ -11,6 +11,7 @@
                 <h5 class="white-text">Navigation</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="{% url 'index' %}">Home</a></li>
+                    <li><a class="grey-text text-lighten-3" href="{% url 'about' %}">About</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'edit_profile' %}">Edit Profile</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'view_groups' %}">Groups</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'view_all_gifts' %}">Gifts</a></li>
