show participants to non captain

--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -67,6 +67,12 @@
   {{captain_management_component}}
 </div>
 
+{% else %}
+
+<div>
+  {% include 'gifts/components/gift_contributors_components.html' %}
+</div>
+
 {% endif %}
 
 
