template for gareth to work on

--- a/gifts/templates/gifts/birthday_card.html
+++ b/gifts/templates/gifts/birthday_card.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load gift_template_tags %}
 {% block head_links %}
-<link rel="stylesheet" type="text/css" href="{% static 'gifts/css/view_gift.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'gifts/css/birthday_card1.css' %}">
 {% endblock %}
 
 {% block content %}
