--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -236,6 +236,6 @@
   class="form-control" style="display: none;" readonly>
 
 {% block end_scripts %}
-<script src="{% static 'gifts/js/viewGift.js?15062021'%}"></script>
+<script src="{% static 'gifts/js/view_gift.js'%}"></script>
 {% endblock %}
 {% endblock %}
