captain can update relations

--- a/gifts/templates/gifts/components/edit_gift_relation_form.html
+++ b/gifts/templates/gifts/components/edit_gift_relation_form.html
@@ -12,7 +12,7 @@
     <p>
       <p style="display: inline-block; margin-right: 7px;">Payment Confirmed</p>
       <label>
-        <input type="checkbox" name="payment_has_cleared" {%if relation.payment_has_cleared%} checked="checked" {%endif%} />
+        <input type="checkbox" name="payment_has_cleared" id="payment_has_cleared_edit" {%if relation.payment_has_cleared%} checked="checked" {%endif%} />
         <span>Payment Confirmed</span>
       </label>
     </p>
